2017-12-04  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/openvassd.c (openvassd_defaults): Add new default value
	open_sock_max_attempts.

	* doc/openvassd.8.in: Update documentation about new default value.

	* misc/network.c (open_sock_tcp): Use the prefs open_sock_max_attempts
	as max value to set a port as closed. When a port is set to closed, it
	send an error message to the manager.

2017-12-01  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (exec_ssh_cmd): Use ssh_channel_read_timeout().

2017-12-01  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* misc/network.c (open_sock_tcp): After some unsuccessfully attempts,
	the port is set to closed.

2017-11-23  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (exec_ssh_cmd): Attach session to a pseudo-terminal
	before executing the command. This ensures that long-running commands
	are properly terminated by the host on session disconnect.

2017-11-21  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/pluginscheduler.c (plugin_add): Check for NULL before calling
	g_strsplit during deprecated plugin check. Replace tabs with spaces.

2017-11-15  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_misc_funcs.c (nasl_gzip): Look for a new local variable
	into the lexic to select the header format, zlib or gzip.

2017-10-31  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (attack_start): Revert r29884.

2017-10-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginscheduler.c (plugins_scheduler_stop): New function.
	(struct plugins_scheduler): Add stopped element.

	* src/pluginscheduler.h: Add function header.

	* src/attack.c (attack_host): Call plugins_scheduler_stop() if scan is
	stopped.

2017-10-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (plug_fork_child): Remove debug messages.

2017-10-25  Hani Benhabiles  <hani.benhabiles@greenbone.net>
